fix scrollbar outline issue in IE 11 #4852

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -263,7 +263,12 @@
         padding: 1em 0 0;
         position: absolute;
         width: 100%;
-
+        /* IE11 specific properties */
+        scrollbar-face-color: #a0a2aa;
+        scrollbar-track-color: #e2e4e7;
+        scrollbar-arrow-color: #a0a2aa;
+        scrollbar-shadow-color: #a0a2aa;
+        /*********/
         &.active {
             display: inline;
         }
